[WIP] explode NElements, NElement,  NElementParser and NElementWriter